--- a/flask_sample/requirements.txt
+++ b/flask_sample/requirements.txt
@@ -5,14 +5,16 @@
 # 1) python -m pip install flask
 # 2) python -m pip install gunicorn
 # 3) python -m pip freeze > requirements.txt
-
 blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.0
 gunicorn==21.2.0
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 packaging==23.2
+pluggy==1.3.0
+pytest==7.4.3
 Werkzeug==3.0.1
