--- a/.github/workflows/Deploy-Heroku-Dev.yml
+++ b/.github/workflows/Deploy-Heroku-Dev.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches:
       - dev
-      - DeploymentSetup
+      #- DeploymentSetup
       - Flak-Profile
 
 # Your workflows jobs.
