--- a/.github/workflows/Deploy-Heroku-Dev.yml
+++ b/.github/workflows/Deploy-Heroku-Dev.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - dev
       #- DeploymentSetup
-      - Flak-Profile
+      #- Flak-Profile
 
 # Your workflows jobs.
 jobs:
