--- a/.github/workflows/Deploy-Heroku-Dev.yml
+++ b/.github/workflows/Deploy-Heroku-Dev.yml
@@ -6,8 +6,8 @@ name: Deploy to heroku dev.
 on:
   push:
     branches:
-      #-  dev
-      - Flak-Profile
+      -  dev
+      #- Flak-Profile
 
 # Your workflows jobs.
 jobs:
